--- a/application/views/Site/css/style.css
+++ b/application/views/Site/css/style.css
@@ -1,83 +1,14 @@
-@CHARSET "UTF-8";
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
+
+.panel{
+	padding: 5px;
 }
 
+.table-margin{
+	margin-top: 20px;
+	
+}
 
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-.container {
-  width: auto;
-  max-width: 680px;
-  padding: 0 15px;
-}
-.container .text-muted {
-  margin: 20px 0;
-}
-.panel {
-width: 400px; 
-margin: 0 auto; 
-padding: 15px 0 0;
-background: #fff;
-border: 1px solid silver;
-font: 16px calibri;
-letter-spacing: -1px;
--webkit-box-shadow: 0 0 2px silver; 
--moz-box-shadow: 0 0 2px silver; 
-box-shadow: 0 0 2px silver;
-}
-form {
-margin: 0;
-}
-label {
-display: block;
-width: 260px;
-padding: 10px 20px;
-color: #696969;
-font-size: 16px;
-text-shadow: 0 0 1px silver;
-}
-#lower {
-background: #ecf2f5;
-width: 360px;
-padding: 5px 20px;
-margin-top: 20px;
-}
-.check {
-display: inline;
-float: none;
-font-size: 11px;
-padding: 5px;
-}
-input[type="submit"] {
-width: 70px;
-padding: 5px 13px;
-border: 1px solid #005f85;
-color: white;
-text-shadow: 0 0 1px black;
-background: #98c9dc;
-position: relative;
-left: 180px;
-}
-#panel, input[type="submit"] {
-    -webkit-border-radius: 5px; 
-    -moz-border-radius: 5px; 
-    border-radius: 5px; 
+.kupa
+{
+	 height: 20px;
 }
