--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3527,10 +3527,10 @@ tbody.collapse.in {
   min-width: 160px;
   padding: 5px 0;
   margin: 2px 0 0;
-  font-size: 14px;
+  font-size: 18px;
   text-align: left;
   list-style: none;
-  background-color: #fff;
+  background-color: #ffe0cc;
   -webkit-background-clip: padding-box;
           background-clip: padding-box;
   border: 1px solid #ccc;
@@ -4275,7 +4275,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   float: left;
   height: 50px;
   padding: 15px 15px;
-  font-size: 18px;
+  font-size: 48px;
   line-height: 20px;
 }
 .navbar-brand:hover,
@@ -4493,8 +4493,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color: #ff9966;
+  border-color: #ff6600;
 }
 .navbar-default .navbar-brand {
   color: #777;
