--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,37 @@
 .abastra{
 	some-src-property: url("abastra.jpg");
 	padding-right: 35px;
-	
+}
+label{
+	margin: auto;
+    width: 100%;
+    padding: 5px;
+    text-align: center;
+}
+input{
+	width: 100%;
+	height: 4%;
+}
+input[type=text]:focus{
+	background-color: lightblue;
+}
+Dropdown{
+    width: 100%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+}
+#tContainer{
+	margin: auto;
+    width: auto;
+    padding: 5px;
+    text-align: center;
+}
+#input2{
+	width: 100%;
+	border: 1px solid black
+}
+#addInvoice{
+	width: 100%;
 }
