--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ Dropdown{
 }
 #tContainer{
 	margin: auto;
-    width: auto;
+    width: 100%;
     padding: 5px;
     text-align: center;
 }
@@ -41,6 +41,6 @@ Dropdown{
 	width: 100%;
 	border: 1px solid black
 }
-#addInvoice{
+#addInvoice,#removeInvoice{
 	width: 100%;
 }
