--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,14 @@
 .abastra{
 	background: url("abastra1.png");
 	padding-right: 35px;
-<<<<<<< HEAD
-	width: 490px;
 	height: 230px;
-=======
+
 	width: 50%;
->>>>>>> branch 'master' of https://github.com/Skjeleton/IM.git
 }
 label{
-	margin: auto;
+	
     width: 100%;
-    padding: 5px;
+	padding: 5px;
     text-align: center;
 }
 input{
@@ -29,6 +26,7 @@ input{
 }
 input[type=text]:focus{
 	background-color: lightblue;
+	text-align: center;
 }
 Dropdown{
     width: 100%;
@@ -53,4 +51,11 @@ Dropdown{
 .mainContainer{
 	margin: 0 auto;
 	width: 1000px;
+}
+.Numbers{
+	width: 50px;
+	margin-left: 5px;
+}
+.Street{
+width: 500px;	
 }
