--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,9 @@ Dropdown{
 #tContainer{
 	margin: auto;
     width: 100%;
-    padding: 5px;
+    padding: 8px;
     text-align: center;
+    
 }
 #input2{
 	width: 100%;
@@ -53,21 +54,31 @@ Dropdown{
 	width: 1000px;
 }
 .Numbers{
-	width: 5%;
+	width: 7%;
 	margin-left: 5px;
 }
 .Street{
-width: 50%;	
+	width: 69%;	
 }
 .TextArea{
 	width: 100%;
 }
 .dataId{
-	width: 291px;
+	width: 49%;
 }
 .AdresStyle{
 	width: 49%;
 }
 .PostalCodeStyle{
-	width: 10%;
+	width: 12%;
+}
+.jsTable{
+	border: 1px;
+	width: 100%;
+}
+thead{
+	padding: 5px auto;
+}
+.jsclass{
+	width: 25%;
 }
