--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,16 @@ thead{
 	padding: 5px auto;
 }
 .jsclass{
-	width: 25%;
+	width: 2%;
+}
+.jsclass2{
+	width: 40%;
+}
+.jsclass3{
+	width: 10%;
+}
+.jsclass4{
+	width: 5%;
 }
 .dropDownCustomers{
 	width: 87%;
