--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ Dropdown{
 	margin: 0 auto;
 	width: 100%
 }
+.mainContainerAuto{
+	margin: 0 auto;
+	width: 1000px;
+}
 .Numbers{
 	width: 7%;
 	margin-left: 5px;
